--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -19,7 +19,7 @@
           "apps/dashboard/src/favicon.ico",
           "apps/dashboard/src/assets"
         ],
-        "styles": ["apps/dashboard/src/styles.scss"],
+        "styles": ["apps/dashboard/src/styles.css"],
         "scripts": [],
         "customWebpackConfig": {
           "path": "apps/dashboard/webpack.config.js"
