--- a/apps/login/project.json
+++ b/apps/login/project.json
@@ -16,7 +16,7 @@
         "polyfills": ["zone.js"],
         "tsConfig": "apps/login/tsconfig.app.json",
         "assets": ["apps/login/src/favicon.ico", "apps/login/src/assets"],
-        "styles": ["apps/login/src/styles.scss"],
+        "styles": ["apps/login/src/styles.css"],
         "scripts": [],
         "customWebpackConfig": {
           "path": "apps/login/webpack.config.js"
