--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
+    "@apollo/server": "^4.7.4",
+    "@nestjs/apollo": "^12.0.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/graphql": "^12.0.3",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.0",
     "@nx/angular": "16.4.0",
     "axios": "^1.0.0",
+    "graphql": "^16.7.1",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.17",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
